test/domains/vass/domain-from-unbounded-ranges-2.good
domain-from-unbounded-ranges-2.chpl:5: error: Default Associative domains with idxType=domain(1,int(64),false,bounded) are not allowed
